[package]
name = "pda-grinder"
version = "0.1.0"
edition = "2021"


[features]
timers = []
default = []

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
five8 = "0.2.1"
rand = "0.8.5"
sha2 = { version = "0.10.8", features = ["asm"] }
solana-pubkey = { version = "2.1.0", features = ["curve25519"] }


[profile.release]
lto = "fat"
codegen-units = 1
